# bot

./: .gitignore  pyproject.toml
assets/: system_prompt.md
src/: main.py
src/core/: assistant.py  db.py  loader.py
